--- a/ndmanager/src/parameterlayout.ui
+++ b/ndmanager/src/parameterlayout.ui
@@ -176,6 +176,9 @@
          <property name="columnCount">
           <number>3</number>
          </property>
+         <attribute name="horizontalHeaderStretchLastSection">
+          <bool>true</bool>
+         </attribute>
          <column>
           <property name="text">
            <string>Name</string>
