--- a/ndmanager/src/spikelayout.ui
+++ b/ndmanager/src/spikelayout.ui
@@ -48,6 +48,9 @@
        <property name="columnCount">
         <number>4</number>
        </property>
+       <attribute name="horizontalHeaderStretchLastSection">
+        <bool>true</bool>
+       </attribute>
        <column>
         <property name="text">
          <string>Channels</string>
