Fix select cells

--- a/ndmanager/src/filelayout.ui
+++ b/ndmanager/src/filelayout.ui
@@ -96,6 +96,9 @@
              <height>100</height>
             </size>
            </property>
+           <property name="editTriggers">
+            <set>QAbstractItemView::AnyKeyPressed|QAbstractItemView::CurrentChanged|QAbstractItemView::EditKeyPressed|QAbstractItemView::SelectedClicked</set>
+           </property>
            <property name="selectionMode">
             <enum>QAbstractItemView::MultiSelection</enum>
            </property>
