--- a/ndmanager/src/spikelayout.ui
+++ b/ndmanager/src/spikelayout.ui
@@ -36,6 +36,9 @@
          <height>32767</height>
         </size>
        </property>
+       <property name="editTriggers">
+        <set>QAbstractItemView::AnyKeyPressed|QAbstractItemView::CurrentChanged|QAbstractItemView::EditKeyPressed</set>
+       </property>
        <property name="selectionMode">
         <enum>QAbstractItemView::MultiSelection</enum>
        </property>
