Fix selection mode

--- a/ndmanager/src/anatomylayout.ui
+++ b/ndmanager/src/anatomylayout.ui
@@ -154,7 +154,7 @@
           <enum>Qt::ScrollBarAsNeeded</enum>
          </property>
          <property name="selectionMode">
-          <enum>QAbstractItemView::MultiSelection</enum>
+          <enum>QAbstractItemView::ExtendedSelection</enum>
          </property>
          <property name="selectionBehavior">
           <enum>QAbstractItemView::SelectRows</enum>
@@ -247,7 +247,7 @@
         <enum>Qt::ScrollBarAsNeeded</enum>
        </property>
        <property name="selectionMode">
-        <enum>QAbstractItemView::MultiSelection</enum>
+        <enum>QAbstractItemView::ExtendedSelection</enum>
        </property>
        <property name="selectionBehavior">
         <enum>QAbstractItemView::SelectRows</enum>
